feat: Add GitHub Actions workflow for automated README updates and introduce a new lab overview section to the README.

--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -7,6 +7,7 @@ on:
       - master
     paths:
       - 'Session*/**/README.md'
+      - 'Hành trình lên mây/**/README.md'
       - 'scripts/sync_readme.py'
   workflow_dispatch:
 
